Made final changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -435,7 +435,7 @@ input.values-toggle-checkbox:checked {
 .btn {
   padding: 7px 55px;
   border-radius: 50px;
-  color: white;
+  color: white !important;
   text-transform: capitalize;
   font-family: inherit;
   text-align: center;
@@ -538,12 +538,15 @@ header.site-header {
   color: #F97D03;
 }
 
+.main-navigation ul > li {
+  padding-bottom: 1rem;
+}
 .main-navigation ul > li > a {
   position: relative;
 }
 .main-navigation ul > li.menu-item-has-children > a::after {
   content: "";
-  background-image: url("/hirejunaid/wp-content/themes/automate-life/assets/images/chevron-down.svg");
+  background-image: url("/wp-content/themes/automate-life/assets/images/chevron-down.svg");
   background-position: center;
   width: 1rem;
   height: 1rem;
@@ -811,7 +814,7 @@ div a.child-category-item {
   color: #1677F0;
   text-decoration: none;
   display: inline-block;
-  margin-left: 0.3rem;
+  margin-left: 0;
   font-size: inherit;
 }
 
@@ -829,29 +832,39 @@ div a.child-category-item {
   text-decoration: none;
 }
 
-.blog-content .wp-block-heading {
+.single-blog-main-content {
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.16);
+}
+
+.blog-content .wp-block-heading,
+.page.page-template-default .wp-block-heading {
   margin-bottom: 1rem;
   line-height: 2rem;
   font-weight: 500;
 }
 @media (min-width: 992px) {
-  .blog-content .wp-block-heading {
+  .blog-content .wp-block-heading,
+  .page.page-template-default .wp-block-heading {
     margin-bottom: 1.5rem;
     line-height: 2.6rem;
   }
 }
-.blog-content p {
+.blog-content p,
+.page.page-template-default p {
   line-height: 28px;
 }
 @media (min-width: 992px) {
-  .blog-content p {
+  .blog-content p,
+  .page.page-template-default p {
     line-height: 40px;
   }
 }
-.blog-content .wp-block-image {
+.blog-content .wp-block-image,
+.page.page-template-default .wp-block-image {
   margin-bottom: 40px;
 }
-.blog-content a[href] {
+.blog-content a[href],
+.page.page-template-default a[href] {
   color: #111;
 }
 
@@ -912,6 +925,9 @@ div a.child-category-item {
 
 .blog-post-card {
   filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 0.16));
+}
+.blog-post-card img {
+  border-radius: 5px 5px 0 0;
 }
 
 .blog-title-header {
@@ -1088,6 +1104,10 @@ div a.child-category-item {
   min-width: 95%;
 }
 
+.email-popup-overlay {
+  background-color: rgba(236, 235, 235, 0.8);
+}
+
 header .header-search-form form {
   margin-bottom: 0 !important;
   transition: all 1s;
@@ -1102,16 +1122,16 @@ header .header-search-form form input[type=search] {
 }
 
 .email-popup-heading {
-  font-size: 24px;
+  font-size: 60%;
 }
 @media (min-width: 768px) {
   .email-popup-heading {
-    font-size: 35px;
+    font-size: 80%;
   }
 }
 @media (min-width: 992px) {
   .email-popup-heading {
-    font-size: 45px;
+    font-size: 90%;
   }
 }
 
@@ -1149,21 +1169,35 @@ header .header-search-form form input[type=search] {
 }
 
 .lead-form-image {
-  height: 85vh;
+  height: 450px;
+  max-height: 600px;
 }
 @media (min-width: 1400px) {
   .lead-form-image {
-    height: 95%;
+    height: 550px;
+    max-height: 750px;
   }
 }
 
+.email-lead-popup-content {
+  font-size: 200%;
+}
+.email-lead-popup-content input[type=email] {
+  font-size: 1.1rem;
+}
+
+.email-popup-close {
+  width: 30px;
+  height: 30px;
+}
+
 .popup-subheading {
-  font-size: 1.3rem;
+  font-size: 1rem;
   font-weight: bold;
 }
 @media (min-width: 992px) {
   .popup-subheading {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 400;
   }
 }
@@ -1315,6 +1349,10 @@ header .header-search-form form input[type=search] {
 .smart-products-slick-mobile .slick-dots li.slick-active button {
   background: #F97D03 !important;
   border: 1px solid #F97D03;
+}
+
+.adthrive-comscore.adthrive-footer-message {
+  display: none;
 }
 
 /*# sourceMappingURL=style.css.map */
