--- a/style.css
+++ b/style.css
@@ -657,7 +657,7 @@ textarea {
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 	float: left;
 	position: absolute;
-	top: calc(100% + 1rem);
+	top: 100%;
 	left: -999em;
 	z-index: 99999;
 }
